--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.26",
+    "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
@@ -50,5 +51,6 @@
     "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "typescript": "^4.8.3"
-  }
+  },
+  "proxy": "http://localhost:4000"
 }
